[package]
name = "zenkit"
version = "0.3.1"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Zenkit client library in Rust"
keywords = ["zenkit","bindings"]
categories = ["api-bindings"]
homepage = "https://github.com/stevelr/zenkit-rs"
repository = "https://github.com/stevelr/zenkit-rs"
readme = "README.md"
documentation = "https://docs.rs/zenkit"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
lazy_static = "1.4"
log = { version="0.4" }
uuid = "0.8"
bytes = "0.5"
strum_macros = "0.19"
num-traits = {version="0.2", default-features=false}
num-derive = "0.3"
reqwest = { version="0.10", features=["json"] }
once_cell = { version="1.5" }
