[package]
name = "zenkit"
version = "0.6.2"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Zenkit client library in Rust"
keywords = ["zenkit","bindings"]
categories = ["api-bindings"]
homepage = "https://github.com/stevelr/zenkit-rs"
repository = "https://github.com/stevelr/zenkit-rs"
readme = "README.md"
documentation = "https://docs.rs/zenkit"

[dependencies]
bytes = "1.0"
chrono = { version="0.4", features=["serde"] }
lazy_static = "1.4"
num-derive = "0.3"
num-traits = { version="0.2", default-features=false }
once_cell = { version="1.5" }
reqwest = { version="0.11", features=["json"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.20"
